# MashUpAssignment

./: .gitignore  102316009.py  Assignment-topsis-text-conversational.ipynb  README.md  assignment-6.ipynb  pyproject.toml  topsis-text-conversational.ipynb
src/Topsis_Aastha_102316009.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/topsis_aastha_102316009/: __main__.py  topsis.py
webapp/: app.py  mashup_engine.py
webapp/templates/: index.html
