[project]
name = "Topsis-Aastha-102316009"
version = "0.1.1"
description = "TOPSIS command line implementation"
authors = [{ name="Aastha" }]
requires-python = ">=3.8"
dependencies = ["numpy", "pandas"]

[project.scripts]
topsis = "topsis_aastha_102316009.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
